correction overflow

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 }
 
 :root {
-  --bg-color: #1092c2;
+  --bg-color: #000b0f;
   --acc-color: #00202e;
 }
 
@@ -153,6 +153,7 @@ section {
   align-items: start;
   flex-direction: column;
   justify-content: start;
+
   h3 {
     font-weight: 400;
   }
@@ -181,6 +182,7 @@ section {
   justify-content: start;
   margin-top: 4em;
   margin-bottom: 4em;
+  overflow-y: hidden;
 }
 
 #project>h3 {
@@ -196,6 +198,7 @@ section {
   justify-content: start;
   flex-wrap: nowrap;
   gap: 2em;
+  overflow-y: hidden;
 }
 
 #projectContainer>div:nth-child(1) {
@@ -213,7 +216,7 @@ section {
   color: white;
   border-radius: 16px;
   position: relative;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 .projectCard::after {
@@ -260,16 +263,16 @@ section {
   align-items: start;
   flex-direction: column;
   justify-content: start;
-  h3{
+
+  h3 {
     font-size: 160%;
   }
 }
 
-.techIcons{
+.techIcons {
   width: 100%;
   height: 2em;
   display: flex;
   align-items: center;
   gap: 2em;
 }
-
